--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "tianting-rag",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.12.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "chunking": "ts-node scripts/chunking.ts"
   },
   "dependencies": {
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "@huggingface/inference": "^4.13.3",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.7",
+    "langchain": "^1.0.6",
+    "pg": "^8.16.3",
+    "pgvector": "^0.2.1",
+    "undici": "^7.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -22,6 +31,9 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/pg": "^8.15.6",
+    "drizzle-kit": "^0.31.7",
+    "ts-node": "^10.9.2"
   }
 }
