--- a/package.json
+++ b/package.json
@@ -8,32 +8,39 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "chunking": "ts-node scripts/chunking.ts"
+    "chunking": "ts-node scripts/chunking.ts",
+    "query": "ts-node scripts/query.ts",
+    "drizzle:generate": "pnpm exec drizzle-kit generate --config drizzle.config.ts",
+    "drizzle:push": "pnpm exec drizzle-kit push --config drizzle.config.ts",
+    "pg:restart": "sudo rm -rf volumes && sudo docker compose down && sudo docker compose up -d",
+    "pg:dbo": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "next": "16.0.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
     "@huggingface/inference": "^4.13.3",
+    "@langchain/core": "^1.0.6",
+    "@langchain/openai": "^1.1.2",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "langchain": "^1.0.6",
+    "next": "16.0.3",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "undici": "^7.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@types/pg": "^8.15.6",
-    "drizzle-kit": "^0.31.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
