``` feat(ai): 集成通义千问 OpenAI 兼容接口
新增对通义千问 OpenAI 兼容接口的支持，配置 `.env.example` 添加相关环境变量，
并在 `lib/ai.ts` 中创建对应的 OpenAI provider 实例。同时更新 README 中的脚本示例
及问答内容展示，优化查询脚本说明和文档结构。

此外，调整 Docker PostgreSQL 数据持久化路径，移除 volumes 忽略项，并引入新的依赖包
如 `@ai-sdk/openai`、`ai` 和 `zod` 以支持 AI 功能模块。
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,5 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./volumes:/var/lib/postgresql/data
+      - /opt/pgsql/data_tianting-rag:/var/lib/postgresql/data
       - ./initdb:/docker-entrypoint-initdb.d # 关键：挂载初始化脚本
