--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,9 @@
 HF_API_KEY=hf_xxxxx
 # 通义千问 API Key
 OPENAI_API_KEY=sk-xxxx
+# 通义千问兼容OpenAI的endpoint
+OPENAI_API_BASE=https://dashscope.aliyuncs.com/compatible-mode/v1
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/tianting"
+
+# 代理，用于解决 HuggingFace Fetch API时的网络问题
+PROXY_URL=http://172.19.80.1:7897
