--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@10.12.4",
   "scripts": {
-    "dev": "next dev",
+    "dev": "rimraf -rf .next && next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -16,20 +16,29 @@
     "dbo": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.28",
+    "@ai-sdk/groq": "^2.0.29",
+    "@ai-sdk/huggingface": "^0.0.9",
     "@ai-sdk/openai": "^2.0.69",
     "@ai-sdk/react": "^2.0.97",
     "@huggingface/inference": "^4.13.3",
     "@langchain/core": "^1.0.6",
     "@langchain/openai": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
     "ai": "^5.0.97",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "langchain": "^1.0.6",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "tailwind-merge": "^3.4.0",
     "undici": "^7.16.0",
     "zod": "^4.1.12"
   },
@@ -43,8 +52,10 @@
     "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
