--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
+    "github-markdown-css": "^5.8.1",
     "langchain": "^1.0.6",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
@@ -38,6 +39,8 @@
     "pgvector": "^0.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "undici": "^7.16.0",
     "zod": "^4.1.12"
