``` feat(web): 添加基于 Next.js 的 Web 聊天界面
- 新增 app/ 目录结构，包含页面和 API 路由
- 实现聊天页面与后端 RAG 接口对接
- 支持常见问题快捷提问与 Markdown 渲染
- 更新 README 文档说明 Web 界面功能与使用方式
- 调整查询脚本启动命令，新增 `pnpm dev` 开发模式
- 优化消息展示样式与响应式布局
```

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,13 @@
 # HuggingFace API Key
 HF_API_KEY=hf_xxxxx
 # 通义千问 API Key
-OPENAI_API_KEY=sk-xxxx
+OPENAI_API_KEY=sk-xxxxx
 # 通义千问兼容OpenAI的endpoint
 OPENAI_API_BASE=https://dashscope.aliyuncs.com/compatible-mode/v1
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/tianting"
 
-# 代理，用于解决 HuggingFace Fetch API时的网络问题
+# 代理，用于解决 HuggingFace Fetch API 时的网络问题 和 groq 地域限制问题
 PROXY_URL=http://172.19.80.1:7897
+
+GROQ_API_KEY=gsk_xxxxx
