``` feat(chat): 优化聊天接口错误处理与依赖更新
- Readme中将 `@ai-sdk/huggingface` 替换为 `@huggingface/inference` 用于生成嵌入向量
- 引入 `APICallError` 捕获并处理 AI 接口调用异常，支持多种状态码识别
- 增加 SSE 格式错误流响应，提升前端错误提示兼容性
- 添加 `sonner` 组件库实现全局 Toast 提示，并在页面中集成错误显示
- 更新依赖项，移除不必要的 `@ai-sdk/*` 包，引入 `next-themes` 和 `sonner`
- 调整 embedding 类型声明以匹配新 inference 客户端返回结构
- 修复 chunking 脚本中 embedding 插入时的类型断言问题
```

--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "dbo": "npx drizzle-kit studio"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.28",
     "@ai-sdk/groq": "^2.0.29",
-    "@ai-sdk/huggingface": "^0.0.9",
-    "@ai-sdk/openai": "^2.0.69",
     "@ai-sdk/react": "^2.0.97",
     "@huggingface/inference": "^4.13.3",
     "@langchain/core": "^1.0.6",
@@ -35,12 +32,14 @@
     "langchain": "^1.0.6",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "undici": "^7.16.0",
     "zod": "^4.1.12"
