``` docs(readme): 更新 pgvector 启动说明和步骤编号调整
新增关于在 Supabase 中启用 pgvector 插件的 SQL 示例，并将安装依赖的步骤序号从第2步调整为第1步。

feat(layout): 更新页面标题和描述信息

设置更具项目特色的元数据标题与描述，明确指出这是基于 RAG 技术、服务于《天听计划：罗斯陷阱》科幻小说的知识库项目。

feat(drizzle): 支持 SSL 连接配置并增强日志输出

增加对数据库 SSL 连接的支持，允许通过环境变量加载 CA 证书；同时开启 Drizzle 的详细日志与严格模式。

fix(scripts): 绕过 TLS 验证以支持本地开发调试

在 chunking 和 drizzle:push 脚本中添加 NODE_TLS_REJECT_UNAUTHORIZED=0 环境变量，
临时解决本地开发时可能遇到的自签名证书问题。
```

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "chunking": "ts-node scripts/chunking.ts",
+    "chunking": "NODE_TLS_REJECT_UNAUTHORIZED=0 ts-node scripts/chunking.ts",
     "query": "ts-node scripts/query.ts",
     "drizzle:generate": "pnpm exec drizzle-kit generate --config drizzle.config.ts",
-    "drizzle:push": "pnpm exec drizzle-kit push --config drizzle.config.ts",
+    "drizzle:push": "NODE_TLS_REJECT_UNAUTHORIZED=0 pnpm exec drizzle-kit push --config drizzle.config.ts",
     "pg:restart": "sudo rm -rf volumes && sudo docker compose down && sudo docker compose up -d",
     "dbo": "npx drizzle-kit studio"
   },
