--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/openai": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/supabase-js": "^2.84.0",
     "ai": "^5.0.97",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,6 +36,7 @@
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "pgvector": "^0.2.1",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
