--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/openai": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "ai": "^5.0.97",
     "class-variance-authority": "^0.7.1",
