feat(supabase): 迁移数据库至 Supabase 并更新相关配置
- 移除对 Drizzle ORM 和 pgvector 的依赖，改为使用 Supabase JavaScript SDK
- 更新 .env.example 文件以包含 Supabase 相关环境变量
- 修改 README.md 文档说明新的数据库设置流程和依赖变更
- 删除旧的 docker-compose、drizzle 配置及初始化脚本
- 调整 package.json 中的依赖项和脚本命令

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
 # 环境变量示例
+
+# ===== AI Services =====
 # HuggingFace API Key
 HF_API_KEY=hf_xxxxx
+# Groq API Key
+GROQ_API_KEY=gsk_xxxxx
 # 通义千问 API Key
 OPENAI_API_KEY=sk-xxxxx
 # 通义千问兼容OpenAI的endpoint
 OPENAI_API_BASE=https://dashscope.aliyuncs.com/compatible-mode/v1
 
-DATABASE_URL="postgresql://postgres:123456@localhost:5432/tianting"
+# ===== Supabase =====
+# Frontend (safe to expose)
+NEXT_PUBLIC_SUPABASE_URL="https://xxxxxxx.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY=xxxxx
+# 用于后台脚本（如 chunking.ts, query.ts）
+# Backend / Scripts (KEEP SECRET!)
+SUPABASE_URL="https://xxxxxxx.supabase.co"
+SUPABASE_SERVICE_ROLE_KEY=xxxxx
 
 # 代理，用于解决 HuggingFace Fetch API 时的网络问题 和 groq 地域限制问题
 PROXY_URL=http://172.19.80.1:7897
-
-GROQ_API_KEY=gsk_xxxxx
