--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "chunking": "NODE_TLS_REJECT_UNAUTHORIZED=0 ts-node scripts/chunking.ts",
-    "query": "ts-node scripts/query.ts",
-    "drizzle:generate": "pnpm exec drizzle-kit generate --config drizzle.config.ts",
-    "drizzle:push": "NODE_TLS_REJECT_UNAUTHORIZED=0 pnpm exec drizzle-kit push --config drizzle.config.ts",
-    "pg:restart": "sudo rm -rf volumes && sudo docker compose down && sudo docker compose up -d",
-    "dbo": "npx drizzle-kit studio"
+    "chunking": "ts-node scripts/chunking.ts",
+    "query": "ts-node scripts/query.ts"
   },
   "dependencies": {
     "@ai-sdk/groq": "^2.0.29",
@@ -29,15 +25,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
     "github-markdown-css": "^5.8.1",
     "langchain": "^1.0.6",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
-    "pgvector": "^0.2.1",
-    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
@@ -50,11 +42,9 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
-    "drizzle-kit": "^0.31.7",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "rimraf": "^6.1.2",
