--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@huggingface/inference": "^4.13.3",
     "@langchain/core": "^1.0.6",
     "@langchain/openai": "^1.1.2",
+    "@langchain/textsplitters": "^1.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.7.0",
